--- a/exo1/style.css
+++ b/exo1/style.css
@@ -3,18 +3,24 @@ html {
 }
 
 #myBtn {
-    display: none;
+    display: block;
     position: fixed;
     bottom: 20px;
     right: 30px;
-    z-index: 99;
-    font-size: 20px;
-    background-color: rgb(66, 66, 66);
+    z-index: -1;
+    font-size: 25px;
+    border: none;
+    outline: none;
+    background-color: rgba(46, 32, 109, 0.8);
+    opacity: 0;
     color: white;
-    padding: 13px 17px;
-    border-radius: 4px;
+    padding: 6px 12px 12px 12px;
+    border-radius: 2rem;
+    transition: padding 500ms, opacity 1s;
+    cursor: pointer;
 }
 
 #myBtn:hover {
-    background-color: rgb(31, 31, 31);
+    background-color: rgba(19, 12, 54, 0.8);
+    padding: 1px 12px 17px 12px;
 }
