--- a/exo1/style.css
+++ b/exo1/style.css
@@ -5,7 +5,7 @@ html {
 #myBtn {
     display: block;
     position: fixed;
-    bottom: 20px;
+    bottom: 0px;
     right: 30px;
     z-index: -1;
     font-size: 25px;
@@ -16,7 +16,7 @@ html {
     color: white;
     padding: 6px 12px 12px 12px;
     border-radius: 2rem;
-    transition: padding 500ms, opacity 1s;
+    transition: padding 500ms, opacity 1s, bottom 1s;
     cursor: pointer;
 }
 
